--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "author": "Douglas Bollella",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "express-query-int": "^1.0.1",
+    "jsonwebtoken": "^7.3.0",
     "lodash": "^4.17.4",
     "mongoose": "^4.10.6",
     "mongoose-paginate": "^5.0.3",
